--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,9 @@
   <div class="section" *ngIf="finishedGames$ | async as games">
     <h2>Senaste matcherna</h2>
     <p *ngFor="let game of games">
-      {{ game.homeTeam }} - {{ game.awayTeam }}, {{ game.homePoints }}-{{ game.awayPoints }}
+      <span *ngIf="game.phase !== 'FINAL'" class="live">&#9679;</span>
+      <span>{{ game.homeTeam }} - {{ game.awayTeam }}, {{ game.homePoints }}-{{ game.awayPoints }}</span>
+      <span class="phase">{{ game.phase }}</span>
     </p>
     <p *ngIf="games.length === 0">Inga intressanta lag har spelat än i denna omgång.</p>
   </div>
