--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -130,6 +130,7 @@
                 &.live {
                     color: #3ae03a;
                     margin-right: 10px;
+                    margin-top: -10px;
                 }
             }
 
